<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Sync Adapter, Account, Content Provider -->
    <string name="account_type">onebrick.org</string>
    <string name="authorities">org.onebrick.android.provider</string>


    <string name="app_name">One Brick</string>
    <string name="more_continue">More&#8230;</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_event_info">EventInfoActivity</string>
    <string name="title_activity_event_description">EventDescription</string>
    <string name="title_activity_my_events">My Events</string>
    <string name="upcoming">Upcoming</string>
    <string name="past_events">Past Events</string>
    <string name="empty_events">No events found.\n\nPlease, check back later.</string>
    <string name="search">Search</string>
    <string name="search_hint">Search events</string>
    <string name="welcome_message">Welcome!\nHappy Volunteering</string>
    <string name="rsvp">RSVP</string>
    <string name="rsvp_not_open">This event will open on&#160; </string>
    <string name="un_rsvp">UnRSVP</string>
    <string name="event_full">The event is FULL</string>
    <string name="manager_label"> Manager</string>
    <string name="coordinator_label"> Coordinator</string>
    <string name="contacts">Would like to contact organizers?</string>

    <!-- authentication -->
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_login_general">Email format incorrect or Password cannot be null or empty string.</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_credentials">Email or password is incorrect.</string>
    <string name="sign_up_link">New User? <a href="http://www.onebrick.org/join/">Join Now</a></string>

    <string name="my_events">My Events</string>
    <string name="select_chapter">Select Chapter</string>
    <string name="select_your_chapter">Select Your Chapter</string>
    <string name="send_intent_title">Share an event via:</string>

    <!-- event detail: google map -->
    <string name="map_disconnected">Disconnected. Please re-connect.</string>
    <string name="map_network_lost">Network lost. Please re-connect.</string>
    <string name="no_location_service">Sorry. Location services not available to you.</string>


    <!-- Spinner items for remainder -->

    <string-array name="timeSpan">
        <item>Tomorrow</item>
        <item>2 Days from now</item>
        <item>A week from now</item>
        <item>Day before the event</item>
        <item>2 Days before the event</item>
        <item>A week before the event</item>
    </string-array>

    <string name="title_activity_search">SearchActivity</string>

    <!-- Toasts messages -->
    <string name="no_network">No network</string>
    <string name="failed_to_fetch_chapters">Failed to fetch chapters</string>
    <string name="failed_to_fetch_my_events">Failed to fetch events</string>
    <string name="failed_to_fetch_event_detail">Failed to fetch event detail</string>
</resources>
