<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.onebrick.android.activities.HomeActivity">

    <item
        android:id="@+id/mi_my_events"
        android:icon="@drawable/ic_my_events"
        android:orderInCategory="10"
        android:title="@string/my_events"
        app:showAsAction="always|collapseActionView"></item>
    <item
        android:id="@+id/mi_search"
        android:icon="@drawable/ic_ab_search"
        android:inputType="textNoSuggestions"
        android:orderInCategory="10"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"></item>
    <item
        android:id="@+id/mi_login"
        android:orderInCategory="10"
        android:title="@string/login"
        app:showAsAction="collapseActionView"></item>

    <item
        android:id="@+id/mi_select_chapter"
        android:orderInCategory="10"
        android:title="@string/select_chapter"
        app:showAsAction="collapseActionView"></item>
    <item
        android:id="@+id/mi_logout"
        android:orderInCategory="10"
        android:title="@string/logout"
        app:showAsAction="collapseActionView"></item>

</menu>
