<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_card">

    <TextView
        android:id="@+id/tv_contact_organizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        android:textColor="@color/charcoal"
        android:textSize="@dimen/event_detail_text_small_size"/>

    <Button
        android:id="@+id/btn_email_manager"
        android:layout_below="@id/tv_contact_organizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/event_detail_text_small_size"
        android:textColor="@color/charcoal"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="4dp"
        android:background="@android:color/transparent"
        android:text="@string/manager_label"/>

    <Button
        android:id="@+id/btn_email_coordinator"
        android:layout_below="@id/tv_contact_organizer"
        android:layout_toRightOf="@+id/btn_email_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textSize="@dimen/event_detail_text_small_size"
        android:textColor="@color/charcoal"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="4dp"
        android:background="@android:color/transparent"
        android:text="@string/coordinator_label"/>
</RelativeLayout>